--- a/portfolio/main/templates/base.html
+++ b/portfolio/main/templates/base.html
@@ -29,6 +29,9 @@
           <a href="/home" class="text-gray-700 hover:text-blue-600 transition duration-300 ease-in-out px-4 py-2 rounded-md font-medium">Home</a>
         </li>
         <li>
+          <a href="/" class="text-gray-700 hover:text-blue-600 transition duration-300 ease-in-out px-4 py-2 rounded-md font-medium">Resume</a>
+        </li>
+        <li>
           <a href="/contact" class="text-gray-700 hover:text-blue-600 transition duration-300 ease-in-out px-4 py-2 rounded-md font-medium">Contact</a>
         </li>
       </ul>
