--- a/portfolio/main/templates/home.html
+++ b/portfolio/main/templates/home.html
@@ -9,7 +9,42 @@
 {% endblock %}
 
 {% block content %}
+<section>
+  <div class="px-4 py-12 mx-auto max-w-8xl sm:px-6 md:px-12 lg:px-24 lg:py-15">
+    <div class="flex flex-wrap items-center mx-auto max-w-7xl">
+      <div class="w-full lg:max-w-lg lg:w-1/2 rounded-xl">
+        <div>
+          <div class="relative w-full max-w-lg">
+            <div class="absolute top-0 rounded-full bg-violet-300 -left-4 w-72 h-72 mix-blend-multiply filter blur-xl opacity-70 animate-blob"></div>
+
+            <div class="absolute rounded-full bg-fuchsia-300 -bottom-24 right-20 w-72 h-72 mix-blend-multiply filter blur-xl opacity-70 animate-blob animation-delay-4000"></div>
+            <div class="relative">
+              <img class="object-cover object-center mx-auto rounded-lg shadow-2xl" alt="hero" src="{% static 'images/arthjani.png' %}">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="flex flex-col items-start mt-12 mb-16 text-left lg:flex-grow lg:w-1/2 lg:pl-6 xl:pl-24 md:mb-0 xl:mt-0">
+        <!-- <span class="mb-8 text-xs font-bold tracking-widest text-blue-600 uppercase"> Your tagline </span> -->
+        <h1 class="mb-8 text-4xl font-bold leading-none tracking-tighter text-neutral-600 md:text-7xl lg:text-5xl">Machine Learning Engineer</h1>
+        <!-- <p class="mb-8 text-base leading-relaxed text-left text-gray-500">Free and Premium themes, UI Kit's, templates and landing pages built with Tailwind CSS, HTML &amp; Next.js.</p> -->
+        <div class="mt-0 lg:mt-6 max-w-7xl sm:flex">
+          <div class="mt-3 rounded-lg sm:mt-0">
+            <button class="items-center block px-10 py-4 text-base font-medium text-center text-white transition duration-500 ease-in-out transform bg-blue-600 rounded-xl hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">Resume</button>
+          </div>
+          <!-- <div class="mt-3 rounded-lg sm:mt-0 sm:ml-3">
+            <button class="items-center block px-10 py-3.5 text-base font-medium text-center text-blue-600 transition duration-500 ease-in-out transform border-2 border-white shadow-md rounded-xl focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">See features</button>
+          </div> -->
+        </div>
+      </div>
+      
+    </div>
+  </div>
+</section>
+<hr>
+<br><br>
   <div class="mb-6">
+    <h1 class="mb-8 text-center text-4xl font-bold leading-none tracking-tighter text-neutral-600 md:text-7xl lg:text-4xl">PROJECTS</h1>
     <input type="text" id="name-search" placeholder="Search by name..." class="border border-gray-300 p-2 rounded w-full mb-4" />
     <div class="flex flex-wrap gap-2">
       {% for tag in tags %}
