--- a/portfolio/main/templates/base.html
+++ b/portfolio/main/templates/base.html
@@ -24,12 +24,15 @@
     </div>
     <!-- Navigation -->
     <nav class="flex">
-      <ul class="flex space-x-8">
+      <ul class="flex space-x-3">
         <li>
           <a href="/home" class="text-gray-700 hover:text-blue-600 transition duration-300 ease-in-out px-4 py-2 rounded-md font-medium">Home</a>
         </li>
         <li>
-          <a href="/" class="text-gray-700 hover:text-blue-600 transition duration-300 ease-in-out px-4 py-2 rounded-md font-medium">Resume</a>
+          <a href="/resume" class="text-gray-700 hover:text-blue-600 transition duration-300 ease-in-out px-4 py-2 rounded-md font-medium">Resume</a>
+        </li>
+        <li>
+          <a href="/blogs" class="text-gray-700 hover:text-blue-600 transition duration-300 ease-in-out px-4 py-2 rounded-md font-medium">Blogs</a>
         </li>
         <li>
           <a href="/contact" class="text-gray-700 hover:text-blue-600 transition duration-300 ease-in-out px-4 py-2 rounded-md font-medium">Contact</a>
@@ -39,7 +42,7 @@
   </div>
 </header>
 
-    <main class="container mx-auto px-4 py-6">
+    <main>
         {% block content %}
         {% endblock content %}
     </main>
