--- a/portfolio/main/templates/home.html
+++ b/portfolio/main/templates/home.html
@@ -30,7 +30,9 @@
         <!-- <p class="mb-8 text-base leading-relaxed text-left text-gray-500">Free and Premium themes, UI Kit's, templates and landing pages built with Tailwind CSS, HTML &amp; Next.js.</p> -->
         <div class="mt-0 lg:mt-6 max-w-7xl sm:flex">
           <div class="mt-3 rounded-lg sm:mt-0">
+            <a href="/resume">
             <button class="items-center block px-10 py-4 text-base font-medium text-center text-white transition duration-500 ease-in-out transform bg-blue-600 rounded-xl hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">Resume</button>
+            </a>
           </div>
           <!-- <div class="mt-3 rounded-lg sm:mt-0 sm:ml-3">
             <button class="items-center block px-10 py-3.5 text-base font-medium text-center text-blue-600 transition duration-500 ease-in-out transform border-2 border-white shadow-md rounded-xl focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">See features</button>
@@ -44,7 +46,8 @@
 </section>
 <hr>
 <br><br>
-  <div class="mb-6">
+<section>
+  <div class="px-4 py-12 mx-auto max-w-8xl sm:px-6 md:px-12 lg:px-24 lg:py-15 mb-6">
     <h1 class="mb-8 text-center text-4xl font-bold leading-none tracking-tighter text-neutral-600 md:text-7xl lg:text-4xl">PROJECTS</h1>
     <input type="text" id="name-search" placeholder="Search by name..." class="border border-gray-300 p-2 rounded w-full mb-4" />
     <div class="flex flex-wrap gap-2">
@@ -53,7 +56,7 @@
       {% endfor %}
     </div>
   </div>
-  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 px-4 py-10 mx-auto max-w-8xl sm:px-6 md:px-12 lg:px-24 lg:py-15">
     {% for project in projects %}
       <div class="project bg-white p-4 rounded shadow" data-name="{{ project.title|lower }}" data-tags="{{ project.tags.all|join:', '|lower }}">
         <h2 class="text-xl font-bold mb-2"><a href="{% url 'project' project.id %}" class="text-blue-600 hover:text-blue-800">{{ project.title }}</a></h2>
@@ -62,7 +65,7 @@
       </div>
     {% endfor %}
   </div>
-
+</section>
 {% endblock %}
 
 {% block extra_js %}
