--- a/portfolio/main/templates/blogs.html
+++ b/portfolio/main/templates/blogs.html
@@ -11,15 +11,16 @@
 <section class="text-gray-600 body-font overflow-hidden">
     <div class="container px-5 py-24 mx-auto">
       <div class="-my-8 divide-y-2 divide-gray-100">
+        {% for blog in blogs %}
         <div class="py-8 flex flex-wrap md:flex-nowrap">
           <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-            <span class="font-semibold title-font text-gray-700">CATEGORY</span>
-            <span class="mt-1 text-gray-500 text-sm">12 Jun 2019</span>
+            <span class="font-semibold title-font text-gray-700">{{ blog.category.all|join:', ' }}</span>
+            <span class="mt-1 text-gray-500 text-sm">{{ blog.created_at }}</span>
           </div>
           <div class="md:flex-grow">
-            <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">Bitters hashtag waistcoat fashion axe chia unicorn</h2>
-            <p class="leading-relaxed">Glossier echo park pug, church-key sartorial biodiesel vexillologist pop-up snackwave ramps cornhole. Marfa 3 wolf moon party messenger bag selfies, poke vaporware kombucha lumbersexual pork belly polaroid hoodie portland craft beer.</p>
-            <a class="text-indigo-500 inline-flex items-center mt-4">Learn More
+            <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">{{ blog.title }}</h2>
+            <p class="leading-relaxed">{{ blog.content | slice:"0:150" }}....</p>
+            <a class="text-indigo-500 inline-flex items-center mt-4" href="{% url 'blog_detail' blog.id %}">Learn More
               <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M5 12h14"></path>
                 <path d="M12 5l7 7-7 7"></path>
@@ -27,9 +28,69 @@
             </a>
           </div>
         </div>
+        {% endfor %}
       </div>
     </div>
   </section>
+  <!-- ====== Blog Section Start -->
+<section class="pt-20 pb-10 lg:pt-[120px] lg:pb-20">
+    <div class="container mx-auto">
+       <div class="flex flex-wrap justify-center -mx-4">
+          <div class="w-full px-4">
+             <div class="mx-auto mb-[60px] max-w-[510px] text-center lg:mb-20">
+                <span class="block mb-2 text-lg font-semibold text-primary">
+                Our Blogs
+                </span>
+                <h2
+                   class="mb-4 text-3xl font-bold text-dark sm:text-4xl md:text-[40px] dark:text-white"
+                   >
+                   Our Recent News
+                </h2>
+                <p class="text-base text-body-color dark:text-dark-6">
+                   There are many variations of passages of Lorem Ipsum available
+                   but the majority have suffered alteration in some form.
+                </p>
+             </div>
+          </div>
+       </div>
+       
+       <div class="flex flex-wrap -mx-4">
+        {% for blog in blogs %}
+          <div class="w-full px-4 md:w-1/2 lg:w-1/3">
+             <div class="w-full mb-10">
+                
+                <div class="mb-8 overflow-hidden rounded">
+                {% for image in blogs.blog_images.all %}
+                   <img src="{{ image.blog_image.url }}" alt="image" class="w-full"/>
+                {% endfor %}
+                </div>
+                
+                <div>
+                   <span
+                      class="inline-block px-4 py-1 mb-5 text-xs font-semibold leading-loose text-center text-black rounded bg-blue"
+                      >
+                      {{ blog.created_at }}
+                   </span>
+                   <h3>
+                      <a
+                         href="{% url 'blog_detail' blog.id %}"
+                         class="inline-block mb-4 text-xl font-semibold text-dark dark:text-white hover:text-primary sm:text-2xl lg:text-xl xl:text-2xl"
+                         >
+                         {{ blog.title }}
+                      </a>
+                   </h3>
+                   <p class="text-base text-body-color dark:text-dark-6">
+                    {{ blog.content | slice:"0:150" }}....
+                   </p>
+                </div>
+             </div>
+          </div>
+        {% endfor %}
+       </div>
+       
+    </div>
+ </section>
+ <!-- ====== Blog Section End -->
 {% endblock %}
 
 
