--- a/portfolio/main/templates/resume.html
+++ b/portfolio/main/templates/resume.html
@@ -27,7 +27,7 @@
   <main class="font-jost hyphens-manual">
     <!-- Page -------------------------------------------------------------------------------------------------------->
     <section
-      class="p-3 my-auto mx-auto max-w-3xl bg-gray-100 rounded-3xl border-4 border-gray-700 sm:p-z md:p-16 lg:mt-6 print:border-0 page print:max-w-letter print:max-h-letter print:mx-0 print:my-o xsm:p-8 print:bg-white md:max-w-letter md:h-letter lg:h-letter">
+      class="p-3 my-auto mx-auto  bg-gray-100 rounded-3xl border-4 border-gray-700 sm:p-z md:p-16 lg:mt-6 print:border-0 page print:max-w-letter print:max-h-letter print:mx-0 print:my-o xsm:p-8 print:bg-white md:max-w-letter md:h-letter lg:h-letter">
       <!-- Name ---------------------------------------------------------------------------------------------------->
       <header class="inline-flex justify-between items-baseline mb-2 w-full align-top border-b-4 border-gray-300">
         <section class="block">
