--- a/portfolio/main/templates/resume.html
+++ b/portfolio/main/templates/resume.html
@@ -27,7 +27,7 @@
   <main class="font-jost hyphens-manual">
     <!-- Page -------------------------------------------------------------------------------------------------------->
     <section
-      class="p-3 my-auto mx-auto  bg-gray-100 rounded-3xl border-4 border-gray-700 sm:p-z md:p-16 lg:mt-6 print:border-0 page print:max-w-letter print:max-h-letter print:mx-0 print:my-o xsm:p-8 print:bg-white md:max-w-letter md:h-letter lg:h-letter">
+      class="p-3 my-auto mx-auto  bg-gray-100 rounded-2xl border-4 border-gray-700 sm:p-9 md:p-16 lg:mt-6 print:border-0 page print:max-w-letter print:max-h-letter print:mx-0 print:my-o xsm:p-8 print:bg-white md:max-w-letter md:h-letter lg:h-letter">
       <!-- Name ---------------------------------------------------------------------------------------------------->
       <header class="inline-flex justify-between items-baseline mb-2 w-full align-top border-b-4 border-gray-300">
         <section class="block">
@@ -122,8 +122,7 @@
             </section>
           </section>
           <!--Summary ---------------------------------------------------------------------------------------------------------->
-          <section class="pb-2 pb-4 mt-0 border-b-4 border-gray-300 first:mt-0">
-            <!-- To keep in the same column -->
+          <!-- <section class="pb-2 pb-4 mt-0 border-b-4 border-gray-300 first:mt-0">
             <section class="break-inside-avoid">
               <h2 class="mb-2 text-xl font-bold tracking-widest text-gray-700 print:font-normal">
                 SUMMARY
@@ -136,7 +135,7 @@
                 </p>
               </section>
             </section>
-          </section>
+          </section> -->
           <!--Education -------------------------------------------------------------------------------------------------------->
           <section class="pb-0 mt-2 border-b-4 border-gray-300 first:mt-0 break-inside-avoid">
             <!-- To keep in the same column -->
@@ -179,7 +178,7 @@
                     <span class="font-semibold text-md">
                       Skills:
                     </span>
-                    Programming, Algorithms, Data Structures, Software Development, Communication
+                    Programming, Algorithms, Data Structures, AI, Machine Leraning, Deep Learning, Communication
                   </li>
                 </ul>
               </section>
@@ -229,13 +228,12 @@
             </section>
           </section>
           <!--Projects -------------------------------------------------------------------------------------------------------->
-          <section class="pb-0 mt-2 border-b-4 border-gray-300 first:mt-0 break-inside-avoid">
+          <section class="pb-0 mt-4 border-b-4 border-gray-300 first:mt-0 break-inside-avoid">
             <!-- To keep in the same column -->
             <section class="break-inside-avoid">
               <h2 class="mb-2 text-lg font-bold tracking-widest text-gray-700 print:font-normal">
                 PROJECTS
               </h2>
-              <!-- school --------------------------------------------------------------------------->
               <section class="mt-2 border-b-2 break-inside-avoid">
                 <header>
                   <h3 class="text-lg font-semibold text-gray-700 leading-snugish">
@@ -298,47 +296,7 @@
                   </li>
                 </ul>
               </section>
-              <!--school 2--------------------------------------------------------------------------------------------->
-              <!-- <section class="pb-4 mt-4 mb-4 border-b-2 break-inside-avoid">
-            <header>
-                <h3
-                    class="flex-grow text-lg font-semibold text-gray-700 leading-snugish"
-                >
-                    Las Positas Community College
-                </h3>
-                <p class="leading-normal text-gray-500 text-md">
-                    2018 &ndash; Present | Associate of Science/Continuing
-                    Education
-                </p>
-            </header>
-            <ul class="mt-2 list-disc list-inside text-gray-800 text-md">
-                <li>
-                    <span
-                        class="font-semibold text-md"
-                    >
-                        Major:
-                    </span>
-                    Computer Science
-                </li>
-                <li>
-                    <span
-                        class="font-semibold text-md"
-                    >
-                        GPA:
-                    </span>
-                    4.0
-                </li>
-                <li>
-                    <span
-                        class="font-semibold text-md"
-                    >
-                        Skills:
-                    </span>
-                    Programming, Algorithms, Data Structures, Software Development
-                </li>
-            </ul>
-        </section> -->
-
+              
 
               <br>
             </section>
@@ -367,22 +325,18 @@
                     <span class="text-gray-500 transform -translate-y-px select-none">
                       &rsaquo;
                     </span>
-                    hello
+                    Developed a machine learning application using the face_recognition library to potentially automate student attendance tracking. Utilized Firebase to store student and attendance data in JSON format.
                   </li>
                   <li>
                     <span class="text-gray-500 transform -translate-y-px select-none">
                       &rsaquo;
                     </span>
-                    hello
-                  </li>
-                  <li>
-                    <span class="text-gray-500 transform -translate-y-px select-none">
-                      &rsaquo;
-                    </span>
-                    hello  
+                    Achieved a 99.34% accuracy rate in student identification.
                   </li>
                 </ul>
+                <br>
               </section>
+              
               <!-- job 2  -->
               <section class="mb-2 border-b-2 border-gray-300 break-inside-avoid">
                 <header>
@@ -409,6 +363,7 @@
                     mathematical calculations for everyday use.
                   </li>
                 </ul>
+                <br>
               </section>
               <!-- job 3 -->
               <section class="mb-2  border-gray-300 break-inside-avoid">
@@ -493,11 +448,23 @@
                     </li>
                     <li
                       class="p-1.5 mb-1 leading-relaxed text-white bg-gray-800 mr-1.6 print:bg-white print:border-inset">
+                      C
+                    </li>
+                    <li
+                      class="p-1.5 mb-1 leading-relaxed text-white bg-gray-800 mr-1.6 print:bg-white print:border-inset">
+                      Java
+                    </li>
+                    <li
+                      class="p-1.5 mb-1 leading-relaxed text-white bg-gray-800 mr-1.6 print:bg-white print:border-inset">
                       Machine Learning
                     </li>
                     <li
                       class="p-1.5 mb-1 leading-relaxed text-white bg-gray-800 mr-1.6 print:bg-white print:border-inset">
                       Deep Learning
+                    </li>
+                    <li
+                      class="p-1.5 mb-1 leading-relaxed text-white bg-gray-800 mr-1.6 print:bg-white print:border-inset">
+                      Streamlit
                     </li>
                     <li
                       class="p-1.5 mb-1 leading-relaxed text-white bg-gray-800 mr-1.6 print:bg-white print:border-inset">
@@ -507,18 +474,10 @@
                       class="p-1.5 mb-1 leading-relaxed text-white bg-gray-800 mr-1.6 print:bg-white print:border-inset">
                       NLP
                     </li>
-                    <!-- <li class="p-1.5 mb-1 leading-relaxed text-white bg-gray-800 mr-1.6 print:bg-white print:border-inset">
-            React.js
-        </li>
-        <li class="p-1.5 mb-1 leading-relaxed text-white bg-gray-800 mr-1.6 print:bg-white print:border-inset">
-            Python
-        </li>
-        <li class="p-1.5 mb-1 leading-relaxed text-white bg-gray-800 mr-1.6 print:bg-white print:border-inset">
-            NoSQL
-        </li>
-        <li class="p-1.5 mb-1 leading-relaxed text-white bg-gray-800 mr-1.6 print:bg-white print:border-inset">
-            Postgresql
-        </li> -->
+                    <li
+                      class="p-1.5 mb-1 leading-relaxed text-white bg-gray-800 mr-1.6 print:bg-white print:border-inset">
+                      SQL
+                    </li>
                     <li
                       class="p-1.5 mb-1 leading-relaxed text-white bg-gray-800 mr-1.6 print:bg-white print:border-inset">
                       MongoDB
@@ -548,7 +507,6 @@
             </section>
           </section>
           </section>
-          <br><br>
         </section>
 
 
