--- a/portfolio/main/templates/resume.html
+++ b/portfolio/main/templates/resume.html
@@ -230,7 +230,7 @@
             <section class="mt-2  break-inside-avoid">
               <header>
                 <h3 class="text-lg font-semibold text-gray-700 leading-snugish">
-                  British Airways
+                  British Airways Customer Sentiment Analysis with NLP
                 </h3>
                 <p class="leading-normal text-sm text-gray-500 text-md">
                   June 2023
